Sell and buying working